Change Sigmoid to ReLU & Softmax, train network, update project structure, add Service class

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # The datasets
-datasets/
+data/datasets/
+
+# Language server settings
+setup.cfg
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
